made pages SEO friendly
added meta descriptions, improved titles

--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact</title>
-<link rel="stylesheet" href="/src/styles.css">
-</head>
-<body>
-  <h1>Contact the croissant</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact The Croissant</title>
+    <meta
+      name="description"
+      content="A joking invitation to write an email to the pastry croissant."
+    />
+    <link rel="stylesheet" href="/src/styles.css" />
+  </head>
+  <body>
+    <h1>Contact The Croissant</h1>
 
-  <p>You've always wanted to be able to give feedback to a real croissant? How much you love it? Or hate it? That you like its flakiness? Or that you'd prefer it to be a little less dry?
-    <br><br>
-    Look no further! Send an email to:
-    <a href="mailto:feedback@TheCroissant.world">feedback@TheCroissant.world</a>
-  <br>
-  (Please be aware that it likely won't reply, though. It's a croissant after all.)
-  </p>
-  <div class="menu">
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
-  </div>
-</body>
+    <p>
+      You've always wanted to be able to give feedback to a real croissant? How
+      much you love it? Or hate it? That you like its flakiness? Or that you'd
+      prefer it to be a little less dry? <br /><br />
+      Look no further! Send an email to:
+      <a href="mailto:feedback@TheCroissant.world"
+        >feedback@TheCroissant.world</a
+      >
+      <br />
+      (Be aware that it likely won't reply, though. It's just a croissant after
+      all.)
+    </p>
+    <div class="menu">
+      <a href="/">Homepage</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </div>
+  </body>
 </html>
