--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Croissant</title>
-<link rel="stylesheet" href="/src/styles.css">
-</head>
-<body>
-  <h1>The Croissant</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Introduction to The Croissant</title>
+    <meta
+      name="description"
+      content="A totally irrelevant website about the pastry croissant."
+    />
+    <link rel="stylesheet" href="/src/styles.css" />
+  </head>
+  <body>
+    <h1>The Croissant</h1>
 
-  <p>This is a webpage about the croissant. Yes, THE croissant. The famous French pastry that, surprisingly enough, is actually from Vienna in Austria and not from France. Who knew?</p>
+    <p>
+      This is a webpage about the croissant. Yes, THE croissant. The famous
+      French pastry that, surprisingly enough, is actually from Vienna in
+      Austria and not from France. Who knew?
+    </p>
 
-  <div class="menu">
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
-  </div>
-
-</body>
+    <div class="menu">
+      <a href="/">Homepage</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </div>
+  </body>
 </html>
