added link titles

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       much you love it? Or hate it? That you like its flakiness? Or that you'd
       prefer it to be a little less dry? <br /><br />
       Look no further! Send an email to:
-      <a href="mailto:feedback@TheCroissant.world"
+      <a href="mailto:feedback@TheCroissant.world" title="Mail to: TheCroissant"
         >feedback@TheCroissant.world</a
       >
       <br />
@@ -27,9 +27,9 @@
       all.)
     </p>
     <div class="menu">
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Home">Homepage</a>
+      <a href="/photo.html" title="Croissant photo">Photo</a>
+      <a href="/contact.html" title="Contact croissant">Contact</a>
     </div>
   </body>
 </html>
