--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </p>
 
     <div class="menu">
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Home">Homepage</a>
+      <a href="/photo.html" title="Croissant photo">Photo</a>
+      <a href="/contact.html" title="Contact croissant">Contact</a>
     </div>
   </body>
 </html>
