--- a/photo.html
+++ b/photo.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Photo of The Croissant</title>
-      <meta name="description" content="A photo of the pastry croissant." />
-<link rel="stylesheet" href="/src/styles.css">
-</head>
-<body>
-  <h1>Photo of The Croissant</h1>
-  <img src="/images/croissantPic.jpg" alt="croissant-and-coffee" width="300px">
-  <div class="pic-description">The croissant in its natural habitat</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Photo of The Croissant</title>
+    <meta name="description" content="A photo of the pastry croissant." />
+    <link rel="stylesheet" href="/src/styles.css" />
+  </head>
+  <body>
+    <h1>Photo of The Croissant</h1>
+    <img
+      src="/images/croissantPic.jpg"
+      alt="croissant-and-coffee"
+      width="300px"
+    />
+    <div class="pic-description">The croissant in its natural habitat</div>
 
-  <di class="menu">
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
-  </div>
-</body>
+    <div class="menu">
+      <a href="/" title="Home">Homepage</a>
+      <a href="/photo.html" title="Croissant photo">Photo</a>
+      <a href="/contact.html" title="Contact croissant">Contact</a>
+    </div>
+  </body>
 </html>
